fix spacing between paragraphs

--- a/add-in/src/editor/editor.module.css
+++ b/add-in/src/editor/editor.module.css
@@ -37,6 +37,6 @@
 }
 
 .paragraph {
-    margin: 0 0 50px 0;
+    margin: 0 0 1em 0;
     position: relative;
 }
